fix overflow

--- a/public/index.css
+++ b/public/index.css
@@ -1,11 +1,14 @@
-html, body, #app {
-  height: 100%;
+html,
+body, #app {
   width: 100%;
+  height: 100%;
+  overflow: hidden;
 }
 
-#app {
-  display: flex;
-  flex-direction: column;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 ::-webkit-scrollbar {
